--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -37,22 +37,6 @@
          <string>Outputs</string>
         </property>
         <layout class="QGridLayout" name="gridLayout_6">
-         <item row="3" column="0">
-          <widget class="QPushButton" name="pushButtonExport">
-           <property name="enabled">
-            <bool>true</bool>
-           </property>
-           <property name="font">
-            <font>
-             <family>Arial</family>
-             <pointsize>15</pointsize>
-            </font>
-           </property>
-           <property name="text">
-            <string>Export Results</string>
-           </property>
-          </widget>
-         </item>
          <item row="2" column="0">
           <widget class="QTextBrowser" name="textBrowserOutput">
            <property name="enabled">
@@ -69,6 +53,8 @@
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 hr { height: 1px; border-width: 0; }
+li.unchecked::marker { content: &quot;\2610&quot;; }
+li.checked::marker { content: &quot;\2612&quot;; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Arial'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p align=&quot;center&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Arial','Arial','Arial';&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
@@ -553,7 +539,7 @@ hr { height: 1px; border-width: 0; }
      <x>0</x>
      <y>0</y>
      <width>849</width>
-     <height>19</height>
+     <height>23</height>
     </rect>
    </property>
   </widget>
